# plover_korean

./: .gitignore  MANIFEST.in  Pipfile  README.md  README.rst  setup.cfg  tox.ini
images/: layout_cas.json  layout_sorizava.json
plover_korean/: dictionary_merger.py  hangeul.py  meta.py  system_cas.py  system_sorizava.py
plover_korean/cas/: system.py  util.py
plover_korean/cas/dictionaries/: ko_cas_base.py  ko_cas_main.py  ko_cas_numbers.py  ko_cas_syllables.py
plover_korean/cas/dictionaries_partial/: ko_cas_briefs.yaml  ko_cas_commands.yaml  ko_cas_conjugations.yaml  ko_cas_endings.yaml  ko_cas_numbers_and_units.yaml  ko_cas_particles.yaml  ko_cas_single_keys.yaml
plover_korean/dictionaries/: ko_cas_main.json  kr_cas_main.json
plover_korean/dictionaries_cas/: briefs.json  fundamental.json
plover_korean/dictionaries_partial/: ko_cas_english_fingerspelling.json  ko_cas_fundamental.json  ko_cas_single_keys.json  ko_cas_syllables.json  kr_cas_single_keys.json  kr_cas_syllables.json  kr_cas_symbols.json
plover_korean/meta/: __init__.py  particle.py
plover_korean/sorizava/: system.py
plover_korean/system/cas/: definition.py  util.py
plover_korean/system/cas/dictionaries/: ko_cas_base.py  ko_cas_numbers.py
plover_korean/system/cas/dictionaries/partial/: ko_cas_block_briefs.yaml  ko_cas_conjunctions.yaml  ko_cas_particles.yaml  ko_cas_symbols.yaml
plover_korean/system/cas/docs/: 1-introduction.md  10-punctuation-numbers-units.md  11-more-particles.md  12-more-conjugations.md  13-final-ㄴ-ㄹ-ㅂ.md  14-ㅇ-key-briefs.md  15-separated-briefs.md  2-steno-order.md  3-fundamentals.md  4-syllable-blocks.md  5-basic-particles.md  6-basic-conjugations.md  7-하다-briefs.md  8-pronoun-usage.md  9-conjunctions.md  README.md
plover_korean/system/sorizava/: definition.py
plover_korean/system/sorizava/dictionaries/: ko_sorizava_base.py
plover_korean/system/sorizava/docs/: README.md
plover_korean/tools/: dictionary_merger.py  syllable_block_generator.py  utilities.py
plover_korean_cas/: system.py
test/: test_cas_util.py  test_ko_cas_base.py  test_ko_cas_numbers.py
