[metadata]
name = plover_korean
version = 0.0.3
description = Korean plugin for Plover.
long_description = file: README.rst
author = Nick Markopoulos
author_email = nsmarkop@gmail.com
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/nsmarkop/plover_korean
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords = plover plover_plugin Korean

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev6
    hgtk>=0.1.1
py_modules =
    plover_korean

[options.entry_points]
plover.system =
    Korean Stenotype (CAS) = plover_korean.system_cas
    # Korean Stenotype (Sorizava) = plover_korean.system_sorizava

plover.meta =
    kr_particle_generic = plover_korean.meta:apply_particle_generic
    kr_particle_neun = plover_korean.meta:apply_particle_neun
    kr_particle_ga = plover_korean.meta:apply_particle_ga
    kr_particle_reul = plover_korean.meta:apply_particle_reul
    kr_particle_da = plover_korean.meta:apply_particle_da
    kr_particle_ya = plover_korean.meta:apply_particle_ya
    kr_particle_wa = plover_korean.meta:apply_particle_wa
    kr_particle_rang = plover_korean.meta:apply_particle_rang
    kr_particle_ro = plover_korean.meta:apply_particle_ro
