[metadata]
name = plover_korean
version = 0.0.3
description = Korean stenography for Plover
long_description = file: README.md
long_description_content_type = text/markdown
author = Nick Markopoulos
author_email = nsmarkop@gmail.com
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/nsmarkop/plover_korean
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords = plover plover_plugin Korean

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev7
    plover-python-dictionary>=0.5.9
    hgtk>=0.1.1
packages =
    plover_korean

[options.entry_points]
plover.system =
    Korean Modern C = plover_korean.system.cas.definition
    # Korean Modern S = plover_korean.system.sorizava.definition

plover.meta =
    ko_particle_generic = plover_korean.meta:apply_particle_generic
    ko_particle_neun = plover_korean.meta:apply_particle_neun
    ko_particle_ga = plover_korean.meta:apply_particle_ga
    ko_particle_reul = plover_korean.meta:apply_particle_reul
    ko_particle_da = plover_korean.meta:apply_particle_da
    ko_particle_ra = plover_korean.meta:apply_particle_ra
    ko_particle_ya = plover_korean.meta:apply_particle_ya
    ko_particle_wa = plover_korean.meta:apply_particle_wa
    ko_particle_rang = plover_korean.meta:apply_particle_rang
    ko_particle_na = plover_korean.meta:apply_particle_na
    ko_particle_ro = plover_korean.meta:apply_particle_ro
    ko_particle_myeo = plover_korean.meta:apply_particle_myeo
